alignment issues fixed

--- a/src/Section_7.css
+++ b/src/Section_7.css
@@ -1,6 +1,7 @@
 .section-7 {
   background-color: black;
   min-height: 100vh;
+  position: relative;
 }
 .data-safe-img {
   width: 100px;
